<resources>
    <string name="app_name">PetAdoption</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_details">Contact: %s</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="error">Unknown error. Try again later.</string>
    <string name="password_error">Passwords are not the same.</string>
    <string name="email_error">Please insert a valid email address.</string>
    <string name="phone_error">Please insert a valid phone number.</string>
    <string name="username_error">Username length should be between 2 and 30.</string>
    <string name="field_empty">Field cannot be empty.</string>
    <string name="password_short">Password length should be > 6.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Phone</string>
    <string name="logout">Logout</string>
    <string name="online_events">Online Events</string>
    <string name="add_pet">Add Pet</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add_an_image">Add An Image</string>
    <string name="begin_date">Begin Date</string>
    <string name="begin_time">Begin Time</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="begins">Begins</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="owner_details">Owner: %s</string>
    <string name="image_required">Image required.</string>
    <string name="begin_date_required">Begin date required</string>
    <string name="end_date_required">End date required.</string>
    <string name="begin_time_required">Begin time required.</string>
    <string name="end_time_required">End time required.</string>
    <string name="location">Location</string>
    <string name="location_details">Location: %s</string>
    <string name="ready">Ready</string>
    <string name="pets_available">Pets Available</string>
    <string name="pet_picture">Pet picture</string>
    <string name="not_ready">Not Ready</string>
    <string name="favorite">Favorite</string>
    <string name="back_arrow">Back arrow</string>
    <string name="edit">Edit</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="edit_password">Edit Password</string>
    <string name="your_pets">Your Pets</string>
    <string name="delete_account">Delete Account</string>
    <string name="my_pets">My Pets</string>
    <string name="delete">Delete</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="new_phone_number">New phone number</string>
    <string name="new_username">New username</string>
    <string name="username_exists">Username Already exists!</string>
    <string name="phone_exists">Phone already exists!</string>
    <string name="username_updated">Username updated successfully!</string>
    <string name="phone_updated">Phone updated successfully!</string>
    <string name="image_updated">Image updated successfully!</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="modify_image">Modify Image</string>
    <string name="delete_dialog">Are you sure?</string>
    <string name="unlike">Unlike</string>
    <string name="your_favorite_pets">Your Favorite Pets</string>
    <string name="please_make_sure_to_verify_your_email">Please make sure to verify your email and sign-in again.</string>
    <string name="re_send">Re-send</string>
    <string name="warning_verify_email">Please verify your email to use this feature.</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="reset_sent">Email has successfully been sent. Check your email. </string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset password</string>
    <string name="race">Race</string>
    <string name="age_months">Age (months)</string>
    <string name="race_detail">Race: %s</string>
    <string name="gender_detail">(%s)</string>
    <string name="age_detail">%s&#160;%s&#160;%s </string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="filter">Filter</string>
    <string name="search_by">Search By</string>
    <string name="available">Available</string>
    <string name="broken_heart">broken_heart</string>
    <string name="you_have_not_liked_any_pet_yet">You have no favorite pets…</string>
    <string name="checkout_some_pets">Checkout some pets&#160;</string>
    <string name="here">here</string>
    <string name="arrow_back">arrow back</string>
    <string name="pets">Pets</string>
    <string name="login_to_show">(Login to show)</string>
    <string name="verify_to_show">(Verify your email to show)</string>
    <string name="distance">%skm away</string>
    <string name="age">Age</string>
    <string name="age_required">Age required.</string>
    <string name="birth">Birth</string>
    <string name="api_key">AIzaSyDlcxbVy78CJHTvh9Ce55zmfYVTtyqeN04</string>
    <string name="location_required">Location required.</string>
    <string name="choose_location">Choose location</string>
    <string name="ok">OK</string>
    <string name="modify_location">Modify location</string>
    <string name="sort_search_by">Sort/Search By</string>
    <string name="go_my_current_location">Go my current Location</string>
    <string name="go_to_my_current_location">Go to my current location</string>
    <string name="new_word">NEW\u00A0</string>
    <string name="published_at">Published on: %s\u00A0</string>
    <string name="more_button">More button</string>
    <string name="type">Type</string>
    <string name="all">All</string>
    <string name="pet">Pet</string>
</resources>