<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".AddPetFragment">

        <TextView
            android:id="@+id/addPetHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/edit_pet"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:fontFamily="@font/roboto_bold" />

        <com.tiper.MaterialSpinner
            android:id="@+id/typeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/type" />

        <LinearLayout
            android:id="@+id/nameGenderLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInput"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.tiper.MaterialSpinner
                android:id="@+id/genderLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:hint="@string/male" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/raceAgeLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/raceLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/raceInput"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/race"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ageButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="16.8dp"
                app:icon="@drawable/ic_baseline_date_range_24"
                app:strokeColor="#6000" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionInput"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:maxHeight="75dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/locationButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/modify_location"
            android:layout_marginBottom="15dp"
            app:icon="@drawable/baseline_room_24"
            app:strokeColor="@color/design_default_color_primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/imagePickerButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/modify_image"
            app:icon="@drawable/ic_baseline_add_24"
            app:strokeColor="@color/design_default_color_primary" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/readySwitch"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/available"
            android:textColor="@color/design_default_color_primary" />

        <LinearLayout
            android:id="@+id/submitCancelLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/submit"
                app:strokeColor="@color/design_default_color_primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                app:strokeColor="@color/design_default_color_primary" />

        </LinearLayout>


        <TextView
            android:id="@+id/errorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:visibility="invisible" />

    </LinearLayout>

</ScrollView>